# cnnframework

./: .gitignore  ActivationLayer.cpp  ActivationLayer.h  CMakeLists.txt  CNN.cbp  CNN.depend  CNN.kdev4  CNN.layout  CNNKdev.kdev4  ConnectedLayer.cpp  ConnectedLayer.h  ConvolutionLayer.cpp  ConvolutionLayer.h  Layer.h  PoolLayer.cpp  PoolLayer.h  README.md  cnn.kdev4  cnnframework.kdev4  convnetwork.cpp  convnetwork.h  filter.cpp  filter.h  kernel.h  layer.cpp  layer.h  main.cpp
.kdev4/: CNN.kdev4  CNNKdev.kdev4  cnn.kdev4
Boost_tests/: CMakeLists.txt  NetworkTest.cpp  PoolLayerTests.cpp
lib/: CMakeLists.txt  cifar10_reader.hpp  mathhelper.h  network.cpp  neuron.cpp  neuron.h
lib/knn/: mathhelper.cpp  mathhelper.h  network.cpp  network.cpp.o.d  network.h  neuron.cpp  neuron.h
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  convnetwork
release/.cmake/api/v1/reply/: cmakeFiles-v1-aee4e40142878025c641.json  codemodel-v2-f925b2554c90b482da27.json  index-2022-01-22T17-51-57-0746.json  target-convnetwork-MinSizeRel-868dde29583c5b164518.json  target-knn-MinSizeRel-9e34d50334d695197fc4.json
release/lib/: cmake_install.cmake
src/: CMakeLists.txt  ConnectedLayer.h  ConvolutionLayer.h  Layer.h  PoolLayer.h  convnetwork.cpp  convnetwork.h  filter.h  kernel.h
src/lib/: CMakeLists.txt  network.cpp  network.h  neuron.h
test/: CMakeLists.txt  TestLayers.cpp
